--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "video-react": "^0.14.1"
   },
   "devDependencies": {
     "ajv": "^6.12.6",
