--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "basic_c_sharp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nicksx9.github.io/CBLE-CSharp/",
   "dependencies": {
     "bootstrap": "^4.6.0",
+    "gh-pages": "^3.1.0",
     "jquery": "^3.6.0",
     "merge": "^1.2.1",
     "oidc-client": "^1.11.5",
@@ -35,6 +37,8 @@
     "extends": "react-app"
   },
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "start": "rimraf ./build && react-scripts start",
     "build": "react-scripts build",
     "test": "cross-env CI=true react-scripts test --env=jsdom",
